Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44053

QJson classes are not present in the list of implicitly shared classes

    XMLWordPrintable

Details

    Description

      On http://doc.qt.io/qt-5/json.html is stated that:

      All JSON classes are value based, implicitly shared classes.

      But they are not listed on http://doc.qt.io/qt-5/implicit-sharing.html

      Attachments

        For Gerrit Dashboard: QTBUG-44053
        # Subject Branch Project Status CR V

        Activity

          People

            vertries Nico Vertriest (Inactive)
            fanda Fanda Vacek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes