src/corelib/json/qjsondocument.cpp
@@ -47,6 +47,7 @@ QT_BEGIN_NAMESPACE
 /*! \class QJsonDocument
     \inmodule QtCore
     \ingroup json
+    \ingroup shared
     \reentrant
     \since 5.0
 
