src/corelib/json/qjsonparser.cpp
@@ -77,6 +77,7 @@ QT_BEGIN_NAMESPACE
     \class QJsonParseError
     \inmodule QtCore
     \ingroup json
+    \ingroup shared
     \reentrant
     \since 5.0
 
